--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,4 +18,4 @@ jobs:
       run: pip install flake8
 
     - name: Run Flake8 
-      run: flake8 quiz_app/src/controllers/quiz_controller.py quiz_app\src\models\quiz_model.py quiz_app\src\services\quiz_service.py quiz_app\tests\test_quiz.py
+      run: flake8 quiz_app/src/controllers/quiz_controller.py quiz_app/src/models/quiz_model.py quiz_app/src/services/quiz_service.py quiz_app/tests/test_quiz.py
