--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,3 +19,8 @@ jobs:
       
     - name: Run tests 
       run: pytest 
+
+    - name: Upload coverage to Codecov 
+      uses: codecov/codecov-action@v2 
+      with: 
+        token: ${{ secrets.CODECOV_TOKEN }} 
