--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,11 +17,10 @@ jobs:
     - name: Install dependencies 
       run: pip install -r requirements.txt 
       
-    - name: Run tests 
-      run: pytest 
+    - name: Run tests with coverage
+      run: pytest --cov=quiz_app --cov-report=xml
 
     - name: Upload coverage to Codecov 
-      uses: codecov/codecov-action@v4 
+      uses: codecov/codecov-action@v2
       with: 
         token: ${{ secrets.CODECOV_TOKEN }}
-        files: ./coverage.xml
