--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
       run: pip install -r requirements.txt 
       
     - name: Run tests with coverage
-      run: pytest --cov=quiz_app --cov-report=xml
+      run: pytest --cov=quiz_app quiz_app/tests/test_quiz.py --cov-report=xml
 
     - name: Upload coverage to Codecov 
       uses: codecov/codecov-action@v2
