--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,8 +17,10 @@ jobs:
     - name: Install dependencies 
       run: pip install -r requirements.txt 
       
+    # - name: Run tests with coverage
+    #   run: pytest --cov=quiz_app quiz_app/tests/test_quiz.py --cov-report=xml
     - name: Run tests with coverage
-      run: pytest --cov=quiz_app quiz_app/tests/test_quiz.py --cov-report=xml
+      run: pytest
 
     - name: Upload coverage to Codecov 
       uses: codecov/codecov-action@v4
