--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -5,6 +5,12 @@ on:
     branches: [main] 
   pull_request: 
     branches: [main] 
+
+permissions:
+  actions: read
+  contents: read
+  security-events: write  
+  
 jobs: 
   analyze: 
     runs-on: ubuntu-latest 
